Ensured Java 17 compatibility (List.getFirst() → get(0))